<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.HomeFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fontFamily="@font/poppins_bold"
            android:textSize="25sp"
            android:paddingTop="40dp"
            android:layout_marginStart="25dp"
            android:text="@string/dicoding_event" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_light"
            android:textSize="15sp"
            android:text="@string/upcoming_events"
            android:layout_marginStart="25dp"/>
        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:layout_gravity="center"
            tools:visibility="visible" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/horizontal_only"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="2dp"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="20dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="300dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/finished_events"
            android:layout_marginTop="30dp"
            android:layout_marginStart="25dp"
            android:fontFamily="@font/poppins_light"
            android:textSize="15sp"
            />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/vertical_only"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clipToPadding="false"
            android:paddingTop="15dp"
            android:paddingBottom="90dp"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="20dp"/>
    </LinearLayout>

</FrameLayout>